--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
-<<<<<<< HEAD
+
 <DOCTYPE html>
 <html lang="es">
 <head>
  <title>Primer Sitio Web</title>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="CSS\estilo.css">
- <img src="imagenes/descarga1.jpg" title="Logotipo hecho por Ramiro" width="100" height="100"/>
+ <img src="imagenes/descarga1.jpg" title="Logotipo hecho por Grupo de diseño de sitios web" width="100" height="100"/>
+ <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
+<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
 </head>
 <h1><center>Fundamentos Del Desarrollo de Software</center></h1>
 <nav>
 	
 <div class="caja1"><label1><h3> Inicio </label1></h3></div><div class="caja2"><label1><h3>Multimedia</label1></h3></div><div class="caja3"><label1><h3>Lecturas</label1></h3></div><div class="caja4"><label1><h3>Actividades </label1></h3></div><div class="caja5"> <label1><h3>Sobre el autor</h3></label1></p></div>
+</nav>
+<table>
 <article>
-	<b><p> Objetivos de la Unidad </p> <p>Importancia del desarrollo del Software</p> <p> Desarrollo del Software-Conceptos </p> <p> Tipos de software</p> <p> Modelos de proceso de software </p> <p> Sobre la calidad del software </p></b>
+	
+	<b><tr><p> Objetivos de la Unidad </p></tr><tr> <p>Importancia del desarrollo del Software</p></tr><tr> <p> Desarrollo del Software-Conceptos </p></tr><tr> <p> Tipos de software</p></tr><tr> <p> Modelos de proceso de software </p></tr><tr> <p> Sobre la calidad del software </p></tr></b>
+</table>
 </article>
+
+
 <br>
 <br>
 <br>
@@ -23,32 +32,4 @@
 <b> <center>	Todos los derechos reservados </center></b>
 </footer>
 
-</nav>
-=======
-<DOCTYPE html>
-<html lang="es">
-<head>
- <title>Primer Sitio Web</title>
- <meta charset="UTF-8">
- <link rel="stylesheet" type="text/css" href="CSS\estilo.css">
- <img src="imagenes/descarga1.jpg" title="Logotipo hecho por Ramiro" width="100" height="100"/>
-</head>
-<h1><center>Fundamentos Del Desarrollo de Software</center></h1>
-<nav>
-	
-<div class="caja1"><label1><h3> Inicio </label1></h3></div><div class="caja2"><label1><h3>Multimedia</label1></h3></div><div class="caja3"><label1><h3>Lecturas</label1></h3></div><div class="caja4"><label1><h3>Actividades </label1></h3></div><div class="caja5"> <label1><h3>Sobre el autor</h3></label1></p></div>
-<article>
-	<b><p> Objetivos de la Unidad </p> <p>Importancia del desarrollo del Software</p> <p> Desarrollo del Software-Conceptos </p> <p> Tipos de software</p> <p> Modelos de proceso de software </p> <p> Sobre la calidad del software </p></b>
-</article>
-<br>
-<br>
-<br>
-<br>
-<br>
-<footer>
-<b> <center>	Todos los derechos reservados </center></b>
-</footer>
 
-</nav>
->>>>>>> 22bd4b4a4a772c5b651c062c5028f0cccce06684
-</html>
