--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
 <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
 <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
+<a href="https://twitter.com/UniversidadUNAD" ><img src="imagenes/descarga3.jpg" width="50" height="50"></a>
 </head>
 <h1><center>Fundamentos Del Desarrollo de Software</center></h1>
 <nav>
@@ -18,7 +19,7 @@
 <table>
 <article>
 	
-	<b><tr><p> Objetivos de la Unidad </p></tr><tr> <p>Importancia del desarrollo del Software</p></tr><tr> <p> Desarrollo del Software-Conceptos </p></tr><tr> <p> Tipos de software</p></tr><tr> <p> Modelos de proceso de software </p></tr><tr> <p> Sobre la calidad del software </p></tr></b>
+<b><tr><td><p> Objetivos de la Unidad </p></tr></td><tr><td><p>Importancia del desarrollo del Software</p></tr></td><tr><td><p> Desarrollo del Software-Conceptos </p></tr></td> <tr><td><p>Tipos de software</p></tr></td> <tr><td><p> Modelos de proceso de software </p></tr></td><tr><td><p>Sobre la calidad del software </p></tr></td>
 </table>
 </article>
 
