--- a/index.html
+++ b/index.html
@@ -19,18 +19,28 @@
 <a href="https://twitter.com/UniversidadUNAD" ><img src="imagenes/descarga3.jpg" width="50" height="50"></a>
 </head>
 
+<body>
+	
+<ul>
+	<li><a href="pagina2.html">PAGINA 2</a></li>
+	<li><a href="pagina3.html">PAGINA 3</a></li>
+</ul>
+
+
+</body>
 <h1><center>FUNDAMENTOS DEL DESARROLLO DE SOFTWARE</center></h1>
 <nav>
 	
 <div class="caja1"><label1><h3> Inicio </label1></h3></div><div class="caja2"><label1><h3>Multimedia</label1></h3></div><div class="caja3"><label1><h3>Lecturas</label1></h3></div><div class="caja4"><label1><h3>Actividades </label1></h3></div><div class="caja5"> <label1><h3>Sobre el autor</h3></label1></p></div>
 </nav>
+
 <table>
 <article>
 	
 <b><tr><td><p> Objetivos de la Unidad </p></tr></td><tr><td><p>Importancia del desarrollo del Software</p></tr></td><tr><td><p> Desarrollo del Software-Conceptos </p></tr></td> <tr><td><p>Tipos de software</p></tr></td> <tr><td><p> Modelos de proceso de software </p></tr></td><tr><td><p>Sobre la calidad del software </p></tr></td>
-</table>
-</article>
 
+</article>
+</table>
 
 <br>
 <br>
@@ -41,4 +51,8 @@
 <b> <center>	Todos los derechos reservados </center></b>
 </footer>
 
+<script src="js/jquery.js"></script>
+<script src="js/prefixfree.js"></script>
+<script src="js/modernizr.js"></script>
 
+</html>
