--- a/pagina2.html
+++ b/pagina2.html
@@ -2,8 +2,11 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Pagina2</title>
+	<title>Pagina 2</title>
+    <meta charset="UTF-8">
+    <meta description="Estructura HTML5 Visual">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 
 <body>
@@ -11,9 +14,7 @@
 	<h1>hola soy la pagina 2</h1>
 	<p> align="justify" Loren</p>
 	
-	<ul>
-	<li><a href="index.html">INICIO</a></li>
-    </ul>
+	<ul><li><a href="index.html">INICIO</a></li></ul>
     
 </body>
 </html>
