--- a/pagina3.html
+++ b/pagina3.html
@@ -1,9 +1,19 @@
 </!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+<html lang="es">
 
+<head>
+	<title>Pagina 3</title>
+    <meta charset="UTF-8">
+    <meta description="Estructura HTML5 Visual">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+</head>
+
+<body>
+    <h1>hola soy la pagina 3</h1>
+	<p> align="justify" Loren</p>
+	
+	<ul><li><a href="index.html">INICIO</a></li></ul>
 </body>
+
 </html>
