--- a/index.html
+++ b/index.html
@@ -1,81 +1,36 @@
 
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="es">
-
 <head>
  <title>Primer Sitio Web</title>
  <meta charset="UTF-8">
- <meta description="Estructura HTML5 Visual">
- <link rel="stylesheet" type="text/css" href="css/normalize.css">
- <link rel="stylesheet" type="text/css" href="css/estilo.css">
- 
-  <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
-
+ <link rel="stylesheet" type="text/css" href="CSS\estilo.css">
+ <img src="imagenes/descarga1.jpg" title="Logotipo hecho por Grupo de diseño de sitios web" width="100" height="100"/>
+ <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
 <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
-
 <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
-
 <a href="https://twitter.com/UniversidadUNAD" ><img src="imagenes/descarga3.jpg" width="50" height="50"></a>
 </head>
-
-<header>
-<!--espacio para agregar el titulo y logo-->
-&lt;HEADER&gt;
-<h1><center>FUNDAMENTOS DEL DESARROLLO DE SOFTWARE</center></h1>
-<img src="img/img1.jpg" title="Photo by NESA by Makers on Unsplash" width="400" height="200"/>
-
-</header>
-
-<body>
-	
-<ul>
-	<li><a href="pagina2.html">PAGINA 2</a></li>
-	<li><a href="pagina3.html">PAGINA 3</a></li>
-</ul>
-
-
-</body>
-
+<h1><center>Fundamentos Del Desarrollo de Software</center></h1>
 <nav>
-<!--aqui va el menu-->
-&lt;NAV&gt;	
-<div class="caja1"><label1><h3> INICIO </label1></h3></div><div class="caja2"><label1><h3>MULTIMEDIA</label1></h3></div><div class="caja3"><label1><h3>LECTURAS</label1></h3></div><div class="caja4"><label1><h3>ACTIVIDADES</label1></h3></div><div class="caja5"> <label1><h3>SOBRE EL AUTOR</h3></label1></p></div>
-
+	
+<a href="inicio.html"><div class="caja1"><label1><h3> Inicio </label1></h3></div></a><div class="caja2"><label1><h3>Multimedia</label1></h3></div><div class="caja3"><label1><h3>Lecturas</label1></h3></div><div class="caja4"><label1><h3>Actividades </label1></h3></div><div class="caja5"> <label1><h3>Sobre el autor</h3></label1></p></div>
 </nav>
-
 <table>
-
-<section id="contenedor">
-	<!--tag por grupos-->
-	<section id="Principal">
-		&lt;SECTION&gt;
-		<article>
-	&lt;ARTICLE&gt;
+<article>
+	
 <b><tr><td><p> Objetivos de la Unidad </p></tr></td><tr><td><p>Importancia del desarrollo del Software</p></tr></td><tr><td><p> Desarrollo del Software-Conceptos </p></tr></td> <tr><td><p>Tipos de software</p></tr></td> <tr><td><p> Modelos de proceso de software </p></tr></td><tr><td><p>Sobre la calidad del software </p></tr></td>
-
-</article>
-	</section>
-	<aside>
-		&lt;ASIDE&gt;
-	</aside>
-</section>	
-
 </table>
+</article>
+
 
 <br>
 <br>
 <br>
 <br>
 <br>
-
 <footer>
-<!--aqui va datos como celular y contaco-->
-
 <b> <center>	Todos los derechos reservados </center></b>
 </footer>
 
-<script src="js/jquery.js"></script>
-<script src="js/prefixfree.js"></script>
-<script src="js/modernizr.js"></script>
 
-</html>
