--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <DOCTYPE html>
 <html lang="es">
 <head>
- <title>Primer Sitio Web</title>
- <meta charset="UTF-8">
- <link rel="stylesheet" type="text/css" href="CSS\estilo.css">
- <img src="imagenes/descarga1.jpg" title="Logotipo hecho por Grupo de diseño de sitios web" width="100" height="100"/>
- <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
-<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
-<noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
-<a href="https://twitter.com/UniversidadUNAD" ><img src="imagenes/descarga3.jpg" width="50" height="50"></a>
+    <title>Primer Sitio Web</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="CSS\estilo.css">
+    <img src="img/descarga1.jpg" title="Logotipo hecho por Grupo de diseño de sitios web" width="100" height="100"/>
+    <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
+    <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
+    <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
+    <a href="https://twitter.com/UniversidadUNAD" ><img src="imagenes/descarga3.jpg" width="50" height="50"></a>
 </head>
 <h1><center>Fundamentos Del Desarrollo de Software</center></h1>
 <nav>
