--- a/index.html
+++ b/index.html
@@ -1,36 +1,57 @@
 
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <title>Primer Sitio Web</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="CSS\estilo.css">
-    <img src="img/descarga1.jpg" title="Logotipo hecho por Grupo de diseño de sitios web" width="100" height="100"/>
-    <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
-    <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
-    <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
-    <a href="https://twitter.com/UniversidadUNAD" ><img src="imagenes/descarga3.jpg" width="50" height="50"></a>
+    <title>primera-web</title>
+    <link rel="stylesheet" href="css/estilos.css">
+
 </head>
-<h1><center>Fundamentos Del Desarrollo de Software</center></h1>
-<nav>
-	
-<a href="inicio.html"><div class="caja1"><label1><h3> Inicio </label1></h3></div></a><div class="caja2"><label1><h3>Multimedia</label1></h3></div><div class="caja3"><label1><h3>Lecturas</label1></h3></div><div class="caja4"><label1><h3>Actividades </label1></h3></div><div class="caja5"> <label1><h3>Sobre el autor</h3></label1></p></div>
-</nav>
-<table>
-<article>
-	
-<b><tr><td><p> Objetivos de la Unidad </p></tr></td><tr><td><p>Importancia del desarrollo del Software</p></tr></td><tr><td><p> Desarrollo del Software-Conceptos </p></tr></td> <tr><td><p>Tipos de software</p></tr></td> <tr><td><p> Modelos de proceso de software </p></tr></td><tr><td><p>Sobre la calidad del software </p></tr></td>
-</table>
-</article>
+
+<body>
+    <div id="contenedor"</div>
+        <header> 
+           <img src="img/banner.jpg" />    
+        </header>
+
+        <section id="menu">
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#lecturas">Lecturas</a></li>
+                <li><a href="#multimedia">Multimedia</a></li>
+                <li><a href="#actividades">Actividades</a></li>
+                <li><a href="#autores">Autores</a></li>
+             </ul> 
+        </section>     
+        
+
+        <section id="contenido">
+
+            <article>
+                <h2>Contenido</h2>
+            </article>  
+  
+        </section>
+           
+         <aside>
+           <h2>Publicidad</h2>
+         </aside>
+
+         <footer>
+           <h2>Pie de pagina</h2>
+         </footer>
 
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<footer>
-<b> <center>	Todos los derechos reservados </center></b>
-</footer>
+     </div>   
 
 
+</body>
+
+<script src="js/modernizr.js"></script>
+<script src="js/prefixfree.js"></script>
+<script src"js/jquery.js"></script>
+
+
+
+</html>
