logo de la UNAD
insercion de logo UNAD

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <div id="contenedor"</div>
-        <header> 
-           <img src="img/banner.jpg" />    
+        <header>
+        <!--Logotipo de la Unad y titulo principal del OVI-->
+        <img src="img/unad.png" width="350" />         
+        <img src="img/banner.jpg" width="600"/>    
         </header>
-
         <section id="menu">
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
@@ -41,7 +42,6 @@
          <footer>
            <h2>Pie de pagina</h2>
          </footer>
-
 
      </div>   
 
