--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <section id="menu">
             <ul>
                 <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="#lecturas">Lecturas</a></li>
-                <li><a href="#multimedia">Multimedia</a></li>
-                <li><a href="#actividades">Actividades</a></li>
-                <li><a href="#autores">Autores</a></li>
+                <li><a href="lecturas">Lecturas</a>                          
+                <li><a href="multimedia">Multimedia</a></li>
+                <li><a href="actividades">Actividades</a></li>
+                <li><a href="autores">Autores</a></li>
              </ul> 
         </section>     
         
@@ -40,7 +40,8 @@
              <div id="sfcsy43ldryu5n5ltwll9ceae86wx357t4x"></div>
             <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
             <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
-            <a href="https://twitter.com/UniversidadUNAD" ><img src="img/descarga3.jpg" width="50" height="50"></a>
+            <a href="https://facebook.com" ><img src="img/facebook.png"></a>
+            <a href="https://twitter.com/UniversidadUNAD" ><img src="img/twitter.png"></a>    
 
 
 
