--- a/index.html
+++ b/index.html
@@ -12,26 +12,37 @@
 </head>
 
 <body>
-    <div id="contenedor"</div>
+    <div id="contenedor">
         <header> 
            <img src="img/banner.jpg" />    
         </header>
 
         <section id="menu">
             <ul>
-                <li><a href="inicio.html">Inicio</a></li>
-                <li><a href="#lecturas">Lecturas</a></li>
-                <li><a href="#multimedia">Multimedia</a></li>
-                <li><a href="#actividades">Actividades</a></li>
-                <li><a href="#autores">Autores</a></li>
+                <li><a href="inicio.html">INICIO</a></li>
+                <li><a href="#lecturas">LECTURAS</a></li>
+                <li><a href="#multimedia">MULTIMEDIA</a></li>
+                <li><a href="#actividades">ACTIVIDADES</a></li>
+                <li><a href="#autores">AUTORES</a></li>
              </ul> 
         </section>     
-        
 
         <section id="contenido">
-
             <article>
-                <h2>Contenido</h2>
+                <br>
+                <br>
+                <br>
+                <h3><a href="pagina2.html">OBJETIVOS DE LA UNIDAD</a> </h3>
+                <br>
+                <h3><a href="https://www.youtube.com/watch?v=rIxFClezDjs">IMPORTANCIA DEL DESARROLLO DEL SOFTWARE</a> </h3>
+                <br>
+                <h3><a href="https://prezi.com/rjpdfe-y-ir-/conceptos-basicos-de-desarrollo-de-software/">DESARROLLO DEL SOFTWARE - CONCEPTOS</a> </h3>
+                <br>
+                <h3><a href="pagina3.hmtl">TIPOS DE SOFTWARE</a> </h3>
+                <br>
+                <h3><a href="">MODELOS DE PROCESO DE SOFTWARE</a> </h3>
+                <br>
+                <h3><a href="">SOBRE CALIDAD DE SOFTWARE</a> </h3>
             </article>  
   
         </section>
@@ -42,11 +53,7 @@
             <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
             <a href="https://twitter.com/UniversidadUNAD" ><img src="img/descarga3.jpg" width="50" height="50"></a>
 
-
-
-
-
-            <h2>Publicidad</h2>
+         <h2>Publicidad</h2>
          </aside>
 
          <footer>
