logo de la UNAD con hipervínvulo
hipervínculo al logo de la UNAD

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="contenedor"</div>
         <header>
         <!--Logotipo de la Unad y titulo principal del OVI-->
-        <img src="img/unad.png" width="350" />         
-        <img src="img/banner.jpg" width="600"/>    
+        <a href="https://www.unad.edu.co/"><img src="img/unad.png" width="300" heigth= '150'></a>        
+        <img src="img/banner.jpg" width="600" heigth='150'/>    
         </header>
         <section id="menu">
             <ul>
@@ -42,10 +42,6 @@
             <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
             <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
             <a href="https://twitter.com/UniversidadUNAD" ><img src="img/descarga3.jpg" width="50" height="50"></a>
-
-
-
-
 
             <h2>Publicidad</h2>
          </aside>
