hipervinculo al boton lecturas
hipervinculo lecturas

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
         <div id="contenedor">
         <header>           
         <section id="menu">
-            <ul>
+            <ul class='nav'>
                 <li><a href="inicio.html">INICIO</a></li>
-                <li><a href="#lecturas">LECTURAS</a></li>
+                <li><a href="#lecturas">LECTURAS</a>
+                 <ul>
+                 <li><a href="software.html">DEFINICION</a></li>
+                <li><a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">GENERALIDADES</a></li>
+                <li><a href="#autores">TIPOS DE SOFTWARE</a></li>
+                </ul>
+                </li>
                 <li><a href="#multimedia">MULTIMEDIA</a></li>
                 <li><a href="#actividades">ACTIVIDADES</a></li>
                 <li><a href="#autores">AUTORES</a></li>
@@ -53,15 +59,16 @@
             <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=sy43ldryu5n5ltwll9ceae86wx357t4x&down=async" async></script>
             <noscript><a href="https://www.contadorvisitasgratis.com" title="contador visitas blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=sy43ldryu5n5ltwll9ceae86wx357t4x" border="0" title="contador visitas blog" alt="contador visitas blog"></a></noscript>
             <a href="https://twitter.com/UniversidadUNAD" ><img src="img/descarga3.jpg" width="50" height="50"></a>
-            <h2>Publicidad</h2>
+            <h2>Publicidad</h2>          
             
          </aside>
 
+           <div>  
          <footer>
                <h2>Todos los derechos reservados </h2>
          </footer>
 
-     </div>   
+        </div>   
 </body>
 
 <script src="js/modernizr.js"></script>
