--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                 <br>
                 <h3><a href="https://prezi.com/rjpdfe-y-ir-/conceptos-basicos-de-desarrollo-de-software/">DESARROLLO DEL SOFTWARE - CONCEPTOS</a> </h3>
                 <br>
-                <h3><a href="p">TIPOS DE SOFTWARE</a> </h3>
+                <h3><a href="http://www.cavsi.com/preguntasrespuestas/clasificacion-del-software/">TIPOS DE SOFTWARE</a> </h3>
                 <br>
-                <h3><a href="">MODELOS DE PROCESO DE SOFTWARE</a> </h3>
+                <h3><a href="https://www.youtube.com/watch?v=NK4aK7Lw-xE">MODELOS DE PROCESO DE SOFTWARE</a> </h3>
                 <br>
-                <h3><a href="">SOBRE CALIDAD DE SOFTWARE</a> </h3>
+                <h3><a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">SOBRE CALIDAD DE SOFTWARE</a> </h3>
             </article>  
   
         </section>
