--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-    <div id="contenedor"</div>
+    <div id="contenedor">
         <header>
         <!--Logotipo de la Unad y titulo principal del OVI-->
         <a href="https://www.unad.edu.co/"><img src="img/unad.png" width="300" heigth= '150'></a>        
         <img src="img/banner.jpg" width="600" heigth='150'/
         <div id="contenedor">
-        <header>           
+        <header>  
+
         <section id="menu">
             <ul class='nav'>
                 <li><a href="inicio.html">INICIO</a></li>
@@ -62,10 +63,9 @@
             <h2>Publicidad</h2>          
             
          </aside>
-
-           <div>  
+  
          <footer>
-               <h2>Todos los derechos reservados </h2>
+               <h2>Todos los derechos reservados</h2> 
          </footer>
 
         </div>   
