--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
                 <li><a href="#multimedia">MULTIMEDIA</a></li>
                 <li><a href="#actividades">ACTIVIDADES</a></li>
-                <li><a href="#autores">AUTORES</a></li>
+                <li><a href="pagina3.html">AUTORES</a></li>
              </ul> 
         </section>     
 
