--- a/pagina3.html
+++ b/pagina3.html
@@ -29,14 +29,20 @@
 
         <section id="contenido1">
             <article>
-            	<br>
-            	<br>
-                <p style="text-align: center;">
-                <iframe src="https://www.youtube.com/watch?v=rIxFClezDjs" 
-                frameborder="0" width="560" height="315">
-                	#document
-                </iframe>
-                </p>
+                <br>
+                <br>
+                <p>Referencia:</p>
+                <br>
+                <p>• ICESI. Control de calidad en el software [Mensaje en un blog]. Recuperado de <a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf</a> </p>
+                <br>
+                <p>• Cavsi. Clasificación del software [Mensaje en un blog]. Recuperado de <a href= "http://www.cavsi.com/preguntasrespuestas/clasificacion-del-software/"> http://www.cavsi.com/preguntasrespuestas/clasificacion-del-software/</a> </p>
+                <br> 
+                <p>• Prezi. Conceptos básicos del desarrollo de software [Mensaje en un blog]. Recuperado de <a href="https://prezi.com/rjpdfe-y-ir-/conceptos-basicos-de-desarrollo-de-software/">https://prezi.com/rjpdfe-y-ir-/conceptos-basicos-de-desarrollo-de-software/</a></p>
+                <br>
+                <p>• Morales Vásquez. YouTube. Modelo de proceso de software [Mensaje en un blog]. Recuperado de <a href="https://www.youtube.com/watch?v=NK4aK7Lw-xE"> https://www.youtube.com/watch?v=NK4aK7Lw-xE</a></p>
+                <br>
+                <p>• Senati - Peru. YouTube. Desarrollo de software [Mensaje en un blog]. Recuperado de <a href="https://www.youtube.com/watch?v=rIxFClezDjs"> https://www.youtube.com/watch?v=rIxFClezDjs</a></p>
+                <br>
                 <a href="index.html">BACK</a>
             </article>  
   
