--- a/pagina2.html
+++ b/pagina2.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -19,7 +19,7 @@
 
         <section id="menu">
             <ul>
-                <li><a href="inicio.html">INICIO</a></li>
+                <li><a href="inicio.html">INICIO</li></a>
                 <li><a href="#lecturas">LECTURAS</a></li>
                 <li><a href="#multimedia">MULTIMEDIA</a></li>
                 <li><a href="#actividades">ACTIVIDADES</a></li>
@@ -32,16 +32,16 @@
             <article>
             	<br>
             	<br>
-                <p>Objetivo general: 
+                <p><b>Objetivo general:</b> 
 				Dar a conocer los fundamentos teóricos del desarrollo de software. </p>
 				<br>
-                <p>Objetivo específico 1:
+                <p><b>Objetivo específico 1:</b>
                 Reconocer e identificar los conceptos básicos que se utilizan en el desarrollo de software.</p>
                 <br>
-                <p>Objetivo específico 2: 
+                <p><b>Objetivo específico 2:</b>
                 Clasificar los diferentes tipos de software.</p>
                 <br>
-                <p>Objetivo específico 3:
+                <p><b>Objetivo específico 3:</b>
                 Identificar los modelos del proceso y la calidad del software.</p>
                 </p>
                 <a href="index.html">BACK</a>
