Posicion footer, agregar back a paginas

--- a/actividades.html
+++ b/actividades.html
@@ -12,12 +12,20 @@
         </header>
     <body>
     	<center><h2>CUESTIONARIOS EN LINEA DE SOFTWARE</h2>
+            <br>
     <a href="https://www.monografias.com/docs/Cuestionario-de-inform%C3%A1tica-y-computaci%C3%B3n-P3J8LCZZMZ">Cuestionario en Linea uno</a>
     <br> <br> <br>
     <a href="https://es.slideshare.net/florpiacente/cuestionario-de-software-9713907"> Cuestionario en linea dos</a>
     <br> <br> <br>
-    <a href="https://prezi.com/nrql4r6en_yu/primeras-20-preguntas/">Veinte preguntas sobre software</a></center>
+    <a href="https://prezi.com/nrql4r6en_yu/primeras-20-preguntas/">Veinte preguntas sobre software</a>
     <br>
+    <br>
+    <br>
+    
+    <a href="index.html">BACK</a>
+    </center>
+    <br>
+
 </body>
 <footer>
 <h3>Todos los derechos reservados</h3></footer>
