--- a/multimedia.html
+++ b/multimedia.html
@@ -20,6 +20,11 @@
 	<div id="video2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NK4aK7Lw-xE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div>
 	<br>
+	<center><h3>Audio sobre conceptos de software</h3></center>
+	<br>
+	<center><audio src="software1.m4a" preolad="none" controls></center></audio>
+<br>
+   <center><audio src="software2.m4a" preolad="none" controls></center></audio>
 	<a href="index.html">BACK</a>  
 </body>
 <br>
