actualizacion paginas orden

--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
         <div id="contenedor">
         </header>  
 <center><img class="banner" src="img/banner.jpg" widht="500"></center>
-        <section id="menu">
-            <ul class='nav'>
+        <nav id="menu">
+            <ul>
                 <li><a href="inicio.html">INICIO</a>&nbsp; &nbsp;</li>
-                <li><a href="#lecturas">LECTURAS</a>&nbsp; &nbsp;
+                <li><a href="#lecturas">LECTURAS</a>
                  <ul>
-                 <li><a href="software.html">DEFINICION</a>&nbsp; &nbsp;</li>
-                <li><a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">GENERALIDADES</a></li>
-                <li><a href="#autores">TIPOS DE SOFTWARE</a></li>
-                </ul>
+                 <li><a href="software.html">DEFINICION</a></li>
+                 <li><a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">GENERALIDADES</a></li>
+                 <li><a href="#autores">TIPOS DE SOFTWARE</a></li>
+                 </ul>
                 </li>
+                
                 <li><a href="multimedia.html">MULTIMEDIA</a>&nbsp;</li>
                 <li><a href="actividades.html">ACTIVIDADES</a>&nbsp;</li>
                 <li><a href="pagina3.html">AUTORES</a></li>
              </ul> 
-        </section>     
+        </nav>     
 
         <section id="contenido">
             <article>
