creacion pagina audios

--- a/actividades.html
+++ b/actividades.html
@@ -1,3 +1,4 @@
+
 <DOCTYPE html>
 <html lang="es">
 
@@ -6,12 +7,21 @@
     <title>primera-web</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="http://allfont.es/allfont.css?fonts=franklin-gothic-heavy" rel="stylesheet" type="text/css" />
-    <header>
-    	<a href="https://www.unad.edu.co/"><img src="img/unad.png" width="300" heigth= '150'></a>        
-        <img src="img/banner.jpg" width="600" heigth='150'/>
+
+
+</head>
+
+<body>
+    <div id="contenedor">
+        <header> 
+           <img src="img/banner.jpg" />    
         </header>
-    <body>
-    	<center><h2>CUESTIONARIOS EN LINEA DE SOFTWARE</h2>
+        <br>
+        <br>
+        <section id="contenido1">
+            <article>
+                <br>
+               <center><h2>CUESTIONARIOS EN LINEA DE SOFTWARE</h2>
             <br>
     <a href="https://www.monografias.com/docs/Cuestionario-de-inform%C3%A1tica-y-computaci%C3%B3n-P3J8LCZZMZ">Cuestionario en Linea uno</a>
     <br> <br> <br>
@@ -21,12 +31,23 @@
     <br>
     <br>
     <br>
-    
-    <a href="index.html">BACK</a>
-    </center>
-    <br>
+            </article>  
+  
+        </section>
+           
+         <a href="index.html">BACK</a> 
+
+         <footer>
+               <h2>Todos los derechos reservados </h2>
+         </footer>
+
+
+     </div>   
+
 
 </body>
-<footer>
-<h3>Todos los derechos reservados</h3></footer>
+
+
+
+
 </html>
