--- a/multimedia.html
+++ b/multimedia.html
@@ -1,3 +1,4 @@
+
 <DOCTYPE html>
 <html lang="es">
 
@@ -6,29 +7,48 @@
     <title>primera-web</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="http://allfont.es/allfont.css?fonts=franklin-gothic-heavy" rel="stylesheet" type="text/css" />
+
+
 </head>
-<header>
-	<a href="https://www.unad.edu.co/"><img src="img/unad.png" width="300" heigth= '150'></a>        
-        <img src="img/banner.jpg" width="600" heigth='150'/>
-    </header>
+
 <body>
-	<center><p><h2>VIDEOS MULTIMEDIA</h2></p></center>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/rIxFClezDjs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <div id="contenedor">
+        <header> 
+           <img src="img/banner.jpg" />    
+        </header>
+        <br>
+        <br>
+        <section id="contenido1">
+            <article>
+            	<br>
+            	<br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rIxFClezDjs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	<br>
 	<br>
 	<br>
 	<div id="video2">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NK4aK7Lw-xE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> </div>
-	<br>
-	<center><h3>Audio sobre conceptos de software</h3></center>
-	<br>
-	<center><audio src="audio/software1.mp3" preolad="none" controls></center></audio>
-<br>
-   <center><audio src="audio/software2.mp3" preolad="none" controls></center></audio>
+    <br>
+    <br>
+                <br>
+                <a href="index.html">BACK</a>
+            </article>  
+  
+        </section>
+           
+         
 
-	<a href="index.html">BACK</a>  
+         <footer>
+               <h2>Todos los derechos reservados </h2>
+         </footer>
+
+
+     </div>   
+
+
 </body>
-<br>
-<footer>
-	<h3> Todos los derechos reservados </h3>
+
+
+
+
 </html>
