hipervinculos a las lecturas y footer
lecturas y footer

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                 <li><a href="#lecturas">LECTURAS</a>
                  <ul>
                  <li><a href="software.html">DEFINICION</a></li>
-                 <li><a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">GENERALIDADES</a></li>
-                 <li><a href="#autores">TIPOS DE SOFTWARE</a></li>
+                 <li><a href="https://okhosting.com/blog/tipos-de-software-su-clasificacion/">TIPOS DE SOFTWARE</a></li>
+                 <li><a href="https://es.ccm.net/contents/223-ciclo-de-vida-del-software">CICLO DE VIDA DEL SOFTWARE</a></li>
+                 <li><a href="https://repository.icesi.edu.co/biblioteca_digital/bitstream/item/4008/1/Control_calidad_software.pdf">CALIDAD DEL SOFTWARE</a></li>
+                 <li><a href="https://leonveraevalhardsoft.wordpress.com/clases/generalidades-del-software/">GENERALIDADES</a></li>   
                  </ul>
                 </li>
                 
@@ -78,7 +80,22 @@
          </aside>
   
          <footer>
-               <h2>Todos los derechos reservados</h2> 
+            <center>
+               <div id="Footer">
+
+                <div>
+                    Sede Nacional: Calle 14 Sur No. 14 - 23<br>
+                    PBX:(+57) 1 344 3700 Bogota#225 D.C. Colombia<br>
+                    L.#237nea nacional gratuita desde Colombia 018000115223<br>
+                    Correo electronico: atencionalusuario@unad.edu.co<br>
+                    Correo electronico de anticorrupcion243n: anticorrupcion@unad.edu.co
+                    <br>
+                </div>
+            </div>
+                        <div id="Sellos">                
+                <img src="Img/Sellos.png" alt="Sellos">
+            </div> 
+        </center>
          </footer>
 
         </div>   
